syntax = "proto3";
package ch.epfl.sdp.game.comm;

message Catch {
    int32 preyID = 1;
}